# realworld-axum

./: .env.sample  Cargo.toml  Makefile
src/: lib.rs
src/config/: config.toml  mod.rs
src/constant/: mod.rs
src/database/: mod.rs  player.rs
src/dto/: common.rs  player.rs
src/handler/: common.rs  mod.rs  player.rs
src/repo/: player.rs
src/router/: common.rs  mod.rs  player.rs
src/server/: mod.rs
src/sql/: init.sql
