[package]
name = "realworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
sea-orm = { version = "0.12.15", features = [
  "sqlx-mysql",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4.37", default-features = false, features = [
  "clock",
  "serde",
] }
dotenv = "0.15"
headers = "0.4.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["attributes"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[[bin]]
name = "ws-server"
path = "src/bin/server.rs"

[[bin]]
name = "ws-client"
path = "src/bin/client.rs"

[[bin]]
name = "rest-server"
path = "src/bin/rest.rs"